vlib/v/checker/tests/match_cast_cond_not_same_range_cast_type_err.out
vlib/v/checker/tests/match_cast_cond_not_same_range_cast_type_err.vv:6:2: error: the range type and the match condition type should match
    4 | c := u8(3)
    5 | match c {
    6 |     a...b { println('1...5') }
      |     ~~~~~
    7 |     else { println('not 1...5') }
    8 | }
Details: 
match condition type: u8
          range type: u16
